--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pet Exchange</title>
-</head>
-<body>
-    <h1>Pet Exchange</h1>
-</body>
-</html>
+<% include ./partials/header %>
+Content goes here
+<% include ./partials/footer %>
