--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,6 +3,9 @@
     .col-md-3.col-sm-6{
         padding: 10px;
     }
+    .jumbotron {
+        margin-top: 1rem;
+    }
 </style>
 <div class="container">
     <div class="jumbotron">
