--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,15 +13,18 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">
             <img src="https://i.imgur.com/FFQZBux.png" width="30" height="30" alt="">
-            Paw Fection
+            PawFection
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>              
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item  active">
+                <li class="nav-item active">
                     <a class="nav-link" href="/"><i class="fas fa-home"></i> Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/post"><i class="fas fa-plus"></i> Post</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/signin"><i class="fas fa-sign-in-alt"></i> Signin</a>
