--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/"><i class="fas fa-home"></i> Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/post"><i class="fas fa-plus"></i> Post</a>
+                    <a class="nav-link" href="/new"><i class="fas fa-plus"></i> Post</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/signin"><i class="fas fa-sign-in-alt"></i> Signin</a>
