--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,16 +26,27 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/new"><i class="fas fa-plus"></i> Post</a>
                 </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <% if(!currentUser){ %>
                 <li class="nav-item">
                     <a class="nav-link" href="/signin"><i class="fas fa-sign-in-alt"></i> Signin</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/signup"><i class="fas fa-user-plus"></i> Signup</a>
                 </li>
+                <% } else { %>
+                <li class="nav-item">
+                    <a class="nav-link"><i class="fas fa-user"></i> <%= currentUser.username %></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                </li>
+                <% } %>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
