--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,3 +1,31 @@
 <% include partials/header %>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-4 signin-form">
+            <form  id="form" action="/signin" method="POST">
+                <h1>Login</h1>
+                <div class="form-group">
+                    <label for="emailinput">Username</label>
+                    <input type="text" name="username" class="form-control" id="emailinput" placeholder="Enter username">
+                </div>
+                <div class="form-group">
+                    <label for="passwordinput">Password</label>
+                    <input type="password" name="password" class="form-control" id="passwordinput" placeholder="Password">
+                </div>
+                <div class="form-group">
+                <button type="submit" class="btn btn-primary">Submit</button>
+               
+               </div>
+            </form>
+        </div>
+        <div class="col-md-4">
+
+        </div>
+    </div>
+</div>
+
 <% include partials/footer %>
