--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,20 +3,20 @@
 <div class="container">
     <div class="row h-100">
         <div class="col-md-5 mx-auto">
-            <form id="signup-form">
+            <form id="signup-form" action="/signup" method="POST">
                 <h1>Signup</h1>
                 <div class="form-group">
-                    <label for="signup-name">Full name</label>
-                    <input type="text" class="form-control" id="signup-name" placeholder="Enter full name">
+                    <label for="signup-name">Username</label>
+                    <input type="text" name="username" class="form-control" id="signup-name" placeholder="Enter username">
                 </div>
                 <div class="form-group">
                     <label for="signup-email">Email address</label>
-                    <input type="email" class="form-control" id="signup-email" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="email" name="email" class="form-control" id="signup-email" aria-describedby="emailHelp" placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
