--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,7 +7,7 @@
         <% pets.forEach(function(pet){ %>
             <% if(pet.price>0){ %>
             <div class="col-md-3 col-sm-6">
-                <div class="card">
+                <div class="card h-100">
                     <img class="card-img-top" src="<%= pet.imageurl %>">
                     <div class="card-body">
                         <h4 class="card-title"><%= pet.title %></h4>
