Seperating database files and adding user to ads as well as schema relations and everything is added

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -13,6 +13,9 @@
                         <h4 class="card-title"><%= pet.title %></h4>
                         <p class="card-text"><i class="fas fa-map-marker-alt"></i> Location: <%= pet.location %></p>
                         <h4 class="card-title"><i class="fas fa-rupee-sign"></i> <%= pet.price %></h4>
+                        <% pet.user.forEach(function(theuser){ %>
+                            <p class="card-text"><i class="fas fa-user"></i> <%= theuser.username %> </p>
+                        <% }); %>
                         <a href="#" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
