--- a/views/new.ejs
+++ b/views/new.ejs
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <label for="post-price">Price</label>
-                    <input type="number" name="price" class="form-control" id="post-price" placeholder="Enter the price or enter 0 for adoption">
+                    <input type="number" name="price" class="form-control" id="post-price" placeholder="Enter the price or Enter 0 to post in adoption">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
