--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/new"><i class="fas fa-plus"></i> Post</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/adopt"><i class="fas fa-heart"></i> Adopt</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
