Change adopt page to hompeage and add shop page and also signup form validation)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="/new"><i class="fas fa-plus"></i> Post</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/adopt"><i class="fas fa-heart"></i> Adopt</a>
+                    <a class="nav-link" href="/shop"><i class="fas fa-shopping-bag"></i> Shop</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
