--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,17 +1,18 @@
 <% include partials/header %>
 <div class="container">
     <div class="jumbotron">
-        <h1>Choose a pet to adopt</h1>
+        <h1>Browse through ads and choose a pet</h1>
     </div>
     <div class="row"> 
         <% pets.forEach(function(pet){ %>
-            <% if(pet.price==0){ %>
+            <% if(pet.price>0){ %>
             <div class="col-md-3 col-sm-6">
-                <div class="card">
+                <div class="card h-100">
                     <img class="card-img-top" src="<%= pet.imageurl %>">
                     <div class="card-body">
                         <h4 class="card-title"><%= pet.title %></h4>
                         <p class="card-text"><i class="fas fa-map-marker-alt"></i> Location: <%= pet.location %></p>
+                        <h4 class="card-title"><i class="fas fa-rupee-sign"></i> <%= pet.price %></h4>
                         <% pet.user.forEach(function(theuser){ %>
                             <p class="card-text"><i class="fas fa-user"></i> <%= theuser.username %> </p>
                         <% }); %>
