--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,19 +4,19 @@
     <div class="row h-100">
         <div class="col-md-5 mx-auto">
             <form id="signup-form" action="/signup" method="POST">
-                <h1>Signup</h1>
+                <h1>Signup</h1><hr>
                 <div class="form-group">
                     <label for="signup-name">Username</label>
-                    <input type="text" name="username" class="form-control" id="signup-name" placeholder="Enter username">
+                    <input type="text" name="username" class="form-control" id="signup-name" placeholder="Enter username (Required)" required>
                 </div>
                 <div class="form-group">
                     <label for="signup-email">Email address</label>
-                    <input type="email" name="email" class="form-control" id="signup-email" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="email" name="email" class="form-control" id="signup-email" aria-describedby="emailHelp" placeholder="Enter email (Required)" required>
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password (Required)" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
