Removing required from placeholders

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -10,11 +10,11 @@
                 <h1>Login</h1><hr>
                 <div class="form-group">
                     <label for="emailinput">Username</label>
-                    <input type="text" name="username" class="form-control" id="emailinput" placeholder="Enter username (Required)" required>
+                    <input type="text" name="username" class="form-control" id="emailinput" placeholder="Enter username" required>
                 </div>
                 <div class="form-group">
                     <label for="passwordinput">Password</label>
-                    <input type="password" name="password" class="form-control" id="passwordinput" placeholder="Password (Required)" required>
+                    <input type="password" name="password" class="form-control" id="passwordinput" placeholder="Password" required>
                 </div>
                 <div class="form-group">
                 <button type="submit" class="btn btn-primary">Submit</button>
