--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,16 +7,16 @@
                 <h1>Signup</h1><hr>
                 <div class="form-group">
                     <label for="signup-name">Username</label>
-                    <input type="text" name="username" class="form-control" id="signup-name" placeholder="Enter username (Required)" required>
+                    <input type="text" name="username" class="form-control" id="signup-name" placeholder="Enter username" required>
                 </div>
                 <div class="form-group">
                     <label for="signup-email">Email address</label>
-                    <input type="email" name="email" class="form-control" id="signup-email" aria-describedby="emailHelp" placeholder="Enter email (Required)" required>
+                    <input type="email" name="email" class="form-control" id="signup-email" aria-describedby="emailHelp" placeholder="Enter email" required>
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password (Required)" required>
+                    <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
