--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,7 +4,7 @@
     <div class="row h-100">
         <div class="col-md-5 mx-auto">
             <form id="post-form" action="/new" method="POST">
-                <h1>Post new ad</h1>
+                <h1>Post new ad</h1><hr>
                 <div class="form-group">
                     <label for="post-title">Title</label>
                     <input type="text" name="title" class="form-control" id="post-title" placeholder="Enter the title">
