--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -8,6 +8,14 @@
             </button>
         </div>
     <% } %> 
+    <% if(successfullsignup && successfullsignup.length > 0) { %>
+        <div class="alert alert-success alert-dismissible fade show alert-homepage" role="alert">
+            <%= successfullsignup %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    <% } %> 
     <% if(successfulllogout && successfulllogout.length > 0) { %>
         <div class="alert alert-warning alert-dismissible fade show alert-homepage" role="alert">
             <%= successfulllogout %>
