--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,6 +4,13 @@
     <div class="row h-100">
         <div class="col-md-5 mx-auto">
             <form id="signup-form" action="/signup" method="POST">
+                <% if(error && error.length > 0) { %>
+                    <div class="alert alert-danger" role="alert">
+                        <div class="container">
+                            <%= error %>
+                        </div>
+                    </div>
+                <% } %>
                 <h1>Signup</h1><hr>
                 <div class="form-group">
                     <label for="signup-name">Username</label>
