--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,5 +1,13 @@
 <% include partials/header %>
 <div class="container">
+    <% if(success && success.length > 0) { %>
+        <div class="alert alert-success alert-dismissible fade show alert-homepage" role="alert">
+            <%= success %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    <% } %> 
     <div class="jumbotron">
         <h1>Browse through ads and choose a pet</h1>
     </div>
