--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -13,6 +13,13 @@
                     </div>
                 </div>
             <% } %>
+            <% if(loginrequired && loginrequired.length > 0) { %>
+                <div class="alert alert-danger" role="alert">
+                    <div class="container">
+                        <%= loginrequired %>
+                    </div>
+                </div>
+            <% } %>
             <form  id="form" action="/signin" method="POST">
                 <h1>Login</h1><hr>
                 <div class="form-group">
