--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,5 @@
 <% include partials/header %>
+
 <div class="container">
     <% if(success && success.length > 0) { %>
         <div class="alert alert-success alert-dismissible fade show alert-homepage" role="alert">
@@ -39,7 +40,7 @@
                         <% pet.user.forEach(function(theuser){ %>
                             <p class="card-text"><i class="fas fa-user"></i> <%= theuser.username %> </p>
                         <% }); %>
-                        <a href="#" class="btn btn-primary">Contact</a>
+                        <a href="/pets/<%= pet._id %> " class="btn btn-primary">More info</a>
                     </div>
                 </div>
             </div>
@@ -47,4 +48,5 @@
         <% }); %>
     </div>
 </div>  
+
 <% include partials/footer %>
