Fixing homepage and shop page cards going out of container

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -31,7 +31,7 @@
     <div class="row">
         <% pets.forEach(function(pet){ %>
             <% if(pet.price==0){ %>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6 hom-card">
                 <div class="card">
                     <img class="card-img-top" src="<%= pet.imageurl %>">
                     <div class="card-body">
