--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -14,7 +14,7 @@
     <div class="row"> 
         <% pets.forEach(function(pet){ %>
             <% if(pet.price>0){ %>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6 hom-card">
                 <div class="card h-100">
                     <img class="card-img-top" src="<%= pet.imageurl %>">
                     <div class="card-body">
