Adding validations in new view

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,11 +7,11 @@
                 <h1>Post new ad</h1><hr>
                 <div class="form-group">
                     <label for="post-title">Title</label>
-                    <input type="text" name="title" class="form-control" id="post-title" placeholder="Enter the title">
+                    <input type="text" name="title" class="form-control" id="post-title" placeholder="Enter the title" required>
                 </div>
                 <div class="form-group">
                     <label for="post-image">Image URL</label>
-                    <input type="text" name="imageurl" class="form-control" id="post-image" placeholder="Enter the url of the image">
+                    <input type="text" name="imageurl" class="form-control" id="post-image" placeholder="Enter the url of the image" required>
                 </div>
                 <div class="form-group">
                     <label for="post-disc">Description</label>
@@ -19,11 +19,11 @@
                 </div>
                 <div class="form-group">
                     <label for="post-loc">Location</label>
-                    <input type="text" name="location" class="form-control" id="post-loc" placeholder="Enter the location">
+                    <input type="text" name="location" class="form-control" id="post-loc" placeholder="Enter the location" required>
                 </div>
                 <div class="form-group">
                     <label for="post-price">Price</label>
-                    <input type="number" name="price" class="form-control" id="post-price" placeholder="Enter the price or Enter 0 to post in adoption">
+                    <input type="number" name="price" class="form-control" id="post-price" placeholder="Enter the price or Enter 0 to post in adoption" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
