Adding dropdown for location

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,8 +18,20 @@
                     <input type="text" name="discription" class="form-control" id="post-disc" placeholder="Enter the description">
                 </div>
                 <div class="form-group">
-                    <label for="post-loc">Location</label>
-                    <input type="text" name="location" class="form-control" id="post-loc" placeholder="Enter the location" required>
+                    <label for="inoutCity">Location</label>
+                    <select id="inputCity" class="form-control" name="location" required>
+                        <option value="" selected disabled>Choose a city</option>
+                        <option>Mumbai</option>
+                        <option>New Delhi</option>
+                        <option>Kolkata</option>
+                        <option>Chennai</option>
+                        <option>Bangalore</option>
+                        <option>Hyderabad</option>
+                        <option>Ahmedabad</option>
+                        <option>Pune</option>
+                        <option>Surat</option>
+                        <option>Jaipur</option>
+                    </select>
                 </div>
                 <div class="form-group">
                     <label for="post-price">Price</label>
