--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,6 +17,10 @@
                     <input type="text" name="username" class="form-control" id="signup-name" placeholder="Enter username" required>
                 </div>
                 <div class="form-group">
+                    <label for="phone-number">Phone number</label>
+                    <input type="tel" name="phone" class="form-control" id="phone-number" placeholder="Enter phone number" required>
+                </div>
+                <div class="form-group">
                     <label for="signup-email">Email address</label>
                     <input type="email" name="email" class="form-control" id="signup-email" aria-describedby="emailHelp" placeholder="Enter email" required>
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
