--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,14 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous">
     </script>
+    <script>
+        // Script to ad active class to nav item based on the page we're in.
+        $(document).ready(function() {
+        // get current URL path and assign 'active' class
+        var pathname = window.location.pathname;
+        $('a[href="'+pathname+'"]').parent().addClass('active');
+        });
+    </script>
     <title>Pawfection</title>
 </head>
 <body>
@@ -29,7 +37,7 @@
         </button>              
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/"><i class="fas fa-home"></i> Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
