--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
     <div class="row prof-row">
         <div class="col">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-center">
                     <h4>Ads you posted!</h4>
                 </div>
                 <div class="card-body">
