Changing url from pets to ads and also added edit route but no logic written yet

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -40,7 +40,7 @@
                         <% pet.user.forEach(function(theuser){ %>
                             <p class="card-text"><i class="fas fa-user"></i> <%= theuser.username %> </p>
                         <% }); %>
-                        <a href="/pets/<%= pet._id %> " class="btn btn-primary">More info</a>
+                        <a href="/ads/<%= pet._id %> " class="btn btn-primary">More info</a>
                     </div>
                 </div>
             </div>
