--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -31,7 +31,12 @@
                                         <h4 class="card-title"><%= ad.title %></h4>
                                         <p class="card-text"><i class="fas fa-map-marker-alt"></i> Location: <%= ad.location %></p>
                                         <p class="card-text"><i class="fas fa-user"></i> <%= user.username %> </p>
-                                        <a href="/pets/<%= ad._id %> " class="btn btn-primary">More info</a>
+                                        <% if (ad.price>0){ %>
+                                            <p><strong>Price :</strong> <%= ad.price %></p>
+                                        <% } else {%>
+                                            <p><i class="fas fa-heart"></i> Adoption</p>
+                                        <% } %>
+                                        <a href="/ads/<%= ad._id %> " class="btn btn-primary">More info</a>
                                     </div>
                                 </div>
                             </div>
