--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -9,6 +9,14 @@
             </button>
         </div>
     <% } %> 
+    <% if(failure && failure.length > 0) { %>
+        <div class="alert alert-danger alert-dismissible fade show alert-homepage" role="alert">
+            <%= failure %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    <% } %> 
     <% if(successfullsignup && successfullsignup.length > 0) { %>
         <div class="alert alert-success alert-dismissible fade show alert-homepage" role="alert">
             <%= successfullsignup %>
@@ -40,6 +48,7 @@
                         <% pet.user.forEach(function(theuser){ %>
                             <p class="card-text"><i class="fas fa-user"></i> <%= theuser.username %> </p>
                         <% }); %>
+                        <p><i class="fas fa-heart"></i> Adoption</p>
                         <a href="/ads/<%= pet._id %> " class="btn btn-primary">More info</a>
                     </div>
                 </div>
