--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group">
                     <label for="post-disc">Description</label>
-                    <input type="text" name="discription" class="form-control" id="post-disc" placeholder="Enter the description">
+                    <input type="text" name="description" class="form-control" id="post-disc" placeholder="Enter the description">
                 </div>
                 <div class="form-group">
                     <label for="inoutCity">Location</label>
