--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,22 @@
 <% include partials/header %>
 
 <div class="container">
+    <% if(success && success.length > 0) { %>
+        <div class="alert alert-success alert-dismissible fade show alert-homepage" role="alert">
+            <%= success %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    <% } %>
+    <% if(failure && failure.length > 0) { %>
+        <div class="alert alert-danger alert-dismissible fade show alert-homepage" role="alert">
+            <%= failure %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    <% } %> 
     <div class="row prof-row">
         <div class="col">
             <div class="card text-center">
@@ -11,6 +27,7 @@
                     <p><strong>Username :</strong> <%= user.username %></p>
                     <p><strong>Email :</strong> <%= user.email %></p>
                     <p><strong>Phone :</strong> <%= user.phone %></p>
+                    <a href="/user/<%= user._id %>/edit" class="btn btn-warning">Edit</a>
                 </div>
             </div>
         </div>
