--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,3 +1,9 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+.navbar-brand{
+    font-weight: 700;
+}
 .hom-card{
     padding-top:10px;
 }
