--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,7 +29,12 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+                <div class="form-group">
+                    <p>Already have an account? <strong><a href="/signin">Signin</a></strong></p>
+                </div>
             </form>
         </div>    
     </div>
