--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,7 +18,20 @@
                     <input type="text" name="description" class="form-control" id="post-disc" placeholder="Enter the description">
                 </div>
                 <div class="form-group">
-                    <label for="inoutCity">Location</label>
+                    <label for="inputCateg">Category</label>
+                    <select id="inputCateg" class="form-control" name="category" required>
+                        <option value="" selected disabled>Choose a category</option>
+                        <option>Dog</option>
+                        <option>Cat</option>
+                        <option>Bird</option>
+                        <option>Rabbit</option>
+                        <option>Fish</option>
+                        <option>Mice</option>
+                        <option>Snake</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="inputCity">Location</label>
                     <select id="inputCity" class="form-control" name="location" required>
                         <option value="" selected disabled>Choose a city</option>
                         <option>Mumbai</option>
