--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -20,7 +20,7 @@
                     <div class="card-body">
                         <h4 class="card-title"><%= pet.title %></h4>
                         <p class="card-text"><i class="fas fa-map-marker-alt"></i> Location: <%= pet.location %></p>
-                        <h4 class="card-title"><i class="fas fa-rupee-sign"></i> <%= pet.price %></h4>
+                        <p class="card-text"><i class="fas fa-rupee-sign"></i> <%= pet.price %></p>
                         <% pet.user.forEach(function(theuser){ %>
                             <p class="card-text"><i class="fas fa-user"></i> <%= theuser.username %> </p>
                         <% }); %>
