--- a/views/pet.ejs
+++ b/views/pet.ejs
@@ -9,6 +9,14 @@
             </button>
         </div>
     <% } %> 
+    <% if(failure && failure.length > 0) { %>
+        <div class="alert alert-danger alert-dismissible fade show alert-homepage" role="alert">
+            <%= failure %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    <% } %>
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="card">
