--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
     <title>Pawfection</title>
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="/">
             <img src="https://i.imgur.com/FFQZBux.png" id="head-img" width="30" height="30" alt="">
             Pawfection
