Make cards clickable

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -49,7 +49,7 @@
                             <p class="card-text"><i class="fas fa-user"></i> <%= theuser.username %> </p>
                         <% }); %>
                         <p><i class="fas fa-heart"></i> Adoption</p>
-                        <a href="/ads/<%= pet._id %> " class="btn btn-primary">More info</a>
+                        <a href="/ads/<%= pet._id %> " class="btn btn-primary stretched-link">More info</a>
                     </div>
                 </div>
             </div>
