--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -53,7 +53,7 @@
                                         <% } else {%>
                                             <p class="card-text"><i class="fas fa-heart"></i> Adoption</p>
                                         <% } %>
-                                        <a href="/ads/<%= ad._id %> " class="btn btn-primary">More info</a>
+                                        <a href="/ads/<%= ad._id %> " class="btn btn-primary stretched-link">More info</a>
                                     </div>
                                 </div>
                             </div>
