Adding hover effect for ads

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -15,7 +15,7 @@
         <% pets.forEach(function(pet){ %>
             <% if(pet.price>0){ %>
             <div class="col-md-3 col-sm-6 hom-card">
-                <div class="card h-100">
+                <div class="card pet-card">
                     <img class="card-img-top" src="<%= pet.imageurl %>">
                     <div class="card-body">
                         <h4 class="card-title"><%= pet.title %></h4>
