--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -27,6 +27,9 @@ nav{
 h4,h5{
     font-size: 1.3rem;
 }
+.pet-card:hover{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
 .card-img-top{
     max-height: 150px;
     object-fit: cover;
