--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -42,7 +42,7 @@
                     <div class="row">
                         <% user.ads.forEach(function(ad){ %>
                             <div class="col-md-3 col-sm-6">
-                                <div class="card">
+                                <div class="card pet-card">
                                     <img class="card-img-top" src="<%= ad.imageurl %>">
                                     <div class="card-body">
                                         <h4 class="card-title"><%= ad.title %></h4>
