--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -34,7 +34,7 @@
         </div>
     <% } %> 
     <div class="jumbotron">
-        <h1>Choose a pet to adopt</h1>
+        <h1 class="jumb-head">Choose a pet to adopt</h1>
     </div>
     <div class="row">
         <% pets.forEach(function(pet){ %>
