--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -44,12 +44,12 @@
                     <img class="card-img-top" src="<%= pet.imageurl %>">
                     <div class="card-body">
                         <h4 class="card-title"><%= pet.title %></h4>
-                        <p class="card-text"><i class="fas fa-map-marker-alt"></i> Location: <%= pet.location %></p>
+                        <p class="card-text"><i class="fas fa-map-marker-alt"></i> <%= pet.location %></p>
                         <% pet.user.forEach(function(theuser){ %>
                             <p class="card-text"><i class="fas fa-user"></i> <%= theuser.username %> </p>
                         <% }); %>
                         <p><i class="fas fa-heart"></i> Adoption</p>
-                        <a href="/ads/<%= pet._id %> " class="btn btn-primary stretched-link">More info</a>
+                        <a href="/ads/<%= pet._id %> " class="btn btn-dark stretched-link">More info</a>
                     </div>
                 </div>
             </div>
