--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Adding fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
     <!-- Adding bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Linking our css file -->
@@ -20,18 +20,10 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous">
     </script>
-    <script>
-        // Script to ad active class to nav item based on the page we're in.
-        $(document).ready(function() {
-        // get current URL path and assign 'active' class
-        var pathname = window.location.pathname;
-        $('a[href="'+pathname+'"]').parent().addClass('active');
-        });
-    </script>
     <title>Pawfection</title>
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">
             <img src="https://i.imgur.com/FFQZBux.png" id="head-img" width="30" height="30" alt="">
             Pawfection
@@ -42,29 +34,29 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link nav-home" href="/"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/new"><i class="fas fa-plus"></i> Post</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/shop"><i class="fas fa-shopping-bag"></i> Shop</a>
+                    <a class="nav-link nav-shop" href="/shop"><i class="fas fa-shopping-bag"></i> Shop</a>
                 </li>
                 <% if(!currentUser){ %>
                 <li class="nav-item">
-                    <a class="nav-link" href="/signin"><i class="fas fa-sign-in-alt"></i> Signin</a>
+                    <a class="nav-link nav-user" href="/signin"><i class="fas fa-sign-in-alt"></i> Signin</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/signup"><i class="fas fa-user-plus"></i> Signup</a>
+                    <a class="nav-link nav-signup" href="/signup"><i class="fas fa-user-plus"></i> Signup</a>
                 </li>
                 <% } else { %>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/<%= currentUser._id %>"><i class="fas fa-user"></i> <%= currentUser.username %></a>
+                    <a class="nav-link nav-user" href="/user/<%= currentUser._id %>"><i class="fas fa-user"></i> <%= currentUser.username %></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                    <a class="nav-link nav-logout" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </li>
                 <% } %>
+                <li class="nav-item">
+                    <a class="nav-link post-nav" href="/new"><i class="fas fa-plus"></i> Post</a>
+                </li>
             </ul>
         </div>
     </nav>
