--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,14 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous">
     </script>
+    <script>
+        // Script to ad active class to nav item based on the page we're in.
+        $(document).ready(function() {
+        // get current URL path and assign 'active' class
+        var pathname = window.location.pathname;
+        $('ul a[href="'+pathname+'"]').parent().addClass('underline');
+        });
+    </script>
     <title>Pawfection</title>
 </head>
 <body>
