--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -81,13 +81,10 @@ h4,h5{
     background-color: #e65c00!important;
     color: black!important;
     font-weight: 700!important;
-    text-align: center;
 }
 .underline{
     border: black 2px solid;
 }
-@media (min-width:768px) {
-    .post-nav{
-        text-align:center;
-    }
+.nav-item{
+    text-align: center;
 }
