--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -11,6 +11,8 @@ body{
 .jumbotron{
     margin-top: 1rem;
     margin-bottom: 0.4rem;
+    background-color: #2c3e50;
+    color: whitesmoke;
 }
 #signup-form{
     margin-top: 1.4rem;
