--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -62,7 +62,7 @@
                     <a class="nav-link nav-logout" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </li>
                 <% } %>
-                <li class="nav-item">
+                <li class="nav-item nav-post-li">
                     <a class="nav-link post-nav" href="/new"><i class="fas fa-plus"></i> Post</a>
                 </li>
             </ul>
